<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutMi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineMi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.155"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonGroupMi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guidelineMi"
                app:layout_constraintTop_toTopOf="parent"
                app:singleSelection="true">

                <Button
                    android:id="@+id/receiveMessageButton"
                    style="@style/OutlinedButtonRoundedMessagerieInterne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inbox"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_message_inbox_24dp"
                    />

                <Button
                    android:id="@+id/sendMessageButton"
                    style="@style/OutlinedButtonRoundedMessagerieInterne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outbox"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_message_outbox_24dp" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/viewPagerOfMessage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButtonGroupMi">
            </androidx.fragment.app.FragmentContainerView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatButtonWriteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/pinkA200"
        android:layout_margin="16dp"
        android:contentDescription="@string/description_content_writing_message"
        app:iconTint="@color/white"
        app:icon="@drawable/ic_message_edit_48dp"/>
</FrameLayout>