<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@android:color/background_light">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutMessagerieInterne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageViewMessagerieInterne"
                        android:layout_width="30dp"
                        android:layout_height="31dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_message_messagerie_interne_48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/content_description_messaging_interne" />

                    <TextView
                        android:id="@+id/textViewMessagerieInterne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_messaging_interne"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/navigateMessagerieInterne"
                        app:layout_constraintStart_toEndOf="@+id/imageViewMessagerieInterne"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/navigateMessagerieInterne"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_navigate_next_48px"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/viewMessagerieInterne"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/backgroundColor"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayoutMessagerieInterne" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutFAQ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/viewMessagerieInterne">

                    <ImageView
                        android:id="@+id/imageViewFAQ"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_message_quiz_48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewFAQ"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_messaging_faq"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/navigateFAQ"
                        app:layout_constraintStart_toEndOf="@+id/imageViewFAQ"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/navigateFAQ"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_navigate_next_48px"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/viewFAQ"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/backgroundColor"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayoutFAQ" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutNews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/viewFAQ">

                    <ImageView
                        android:id="@+id/imageViewNews"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_message_news_48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewNews"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_messaging_actualites"
                        android:textColor="@android:color/background_dark"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/navigateNews"
                        app:layout_constraintStart_toEndOf="@+id/imageViewNews"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/navigateNews"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/ic_navigate_next_48px"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/backgroundColor"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNews" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>