<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <!--
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerCategorieMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/categorieMessageEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/categorieMessageEditText" />

                <EditText
                    android:id="@+id/categorieMessageEditText"
                    android:layout_width="0dp"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:hint="to"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinnerCategorieMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/subjectMessageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Subject"
                />

            <EditText
                android:id="@+id/messageContentEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="Message"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSendMessageWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="Envoyer"
                app:backgroundTint="@color/pinkA200" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor2"
        >
        <!--
                <ScrollView
                    android:background="@color/white"
                    android:padding="10dp"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/categorieMessageEdit"
                            android:layout_marginTop="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Categorie"
                            app:errorEnabled="true"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:id="@+id/edit1"
                            android:layout_marginTop="32dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:hint="Objet"
                            app:hintAnimationEnabled="true"
                            android:layout_below="@id/categorieMessageEdit">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/objectMessageEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/edit1"
                            android:layout_marginTop="64dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:hint="Message"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:id="@+id/dd">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/messageEdit"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:focusable="true"
                                android:inputType="textMultiLine" />
                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonSendMessageWriting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/dd"
                            android:layout_marginTop="32dp"
                            android:text="Envoyer" />

                    </RelativeLayout>

                </ScrollView>
        -->
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/spinnerCategorieMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/categorieMessageEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/categorieMessageEditText" />

                <EditText
                    android:id="@+id/categorieMessageEditText"
                    android:layout_width="0dp"
                    android:enabled="true"
                    android:layout_height="wrap_content"
                    android:hint="to"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinnerCategorieMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/subjectMessageEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Subject"
                />

            <EditText
                android:id="@+id/messageContentEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="Message"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSendMessageWrite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="Envoyer"
                app:backgroundTint="@color/pinkA200" />

        </LinearLayout>
        -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/accountsMaterialSpinnerCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
<!--
            <com.mediasoft.bindoomobile.components.MaterialSpinner
                android:id="@+id/accountsMaterialSpinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/material_spinner_height"
                app:ms_alignLabels="true" app:ms_arrowColor="@color/primaryColor"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/primaryColor"
                app:ms_floatingLabelText="@string/account"
                app:ms_highlightColor="@color/primaryColor"
                app:ms_thickness="0dp" />
                -->
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="#fcfcfc"
            android:hint="@string/hint_objet_message_write"
            app:cardCornerRadius="8dp"
            app:boxBackgroundColor="#fcfcfc"
            app:boxStrokeColor="#0099ff"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_arrow_expand_24dp"
            app:endIconMode="custom"
            app:errorEnabled="true"
            app:endIconTint="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountsMaterialSpinnerCard"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.MyApp.MediumComponent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:boxBackgroundColor="#fcfcfc"
            app:boxStrokeColor="#0099ff"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@+id/materialButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="auto"
                android:gravity="top"
                android:hint="@string/hint_message_write"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:backgroundTint="@color/pinkA200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>